26/candidate/php_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-candidate-php-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-candidate-php
  template:
    metadata:
      labels:
        app: app-candidate-php
    spec:
      volumes:
      - name: app-candidate-code
        persistentVolumeClaim:
          claimName: app-candidate-code
      containers:
      - name: php
        image: amarrak/sitecandidate:v1.21
        volumeMounts:
          - name: app-candidate-code
            mountPath: /code
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "cp -r /myapp/. /code; cd /code; php receiver.php &"]

#        initContainers:
#        - name: install
#          image: busybox
#          volumeMounts:
#          - name: code
#            mountPath: /code
#          command:
#          - wget
#          - "-O"
#          - "/code/index.php"
#          - https://raw.githubusercontent.com/amarrak/kube/master/index.php
