26/candidate/php_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-candidate-php-service
spec:
  selector:
    app: app-candidate-php
  ports:
  - protocol: TCP
    port: 9000
  type: NodePort
