26/candidate/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: candidate-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /candidate($|/)(.*)
            backend:
              serviceName: app-candidate-nginx-service
              servicePort: 8000
